--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 
 /* Basic resets */
 * {
-    box-sizing: border-box; /* Make sure padding doesn't overflow */
+    /* Make sure padding doesn't overflow */
+    box-sizing: border-box;
 }
 
 html, body {
